[package]
name = "cvm"
version = "0.1.0"
edition = "2021"

[dependencies]
semver = "1.0.24"
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.216", features = ["derive"] }
url = "2.5.4"
serde_json = "1.0.133"
once_cell = "1.20.2"
reqwest = { version = "0.12.9", features = ["json"] }
tempfile = "3.14.0"
chrono = "0.4.39"
ctrlc = "3.4.5"
crossbeam-channel = "0.5.14"
