[package]
name = "cvm_server"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
sqlx = { version = "0.8.2", features = ["chrono", "postgres", "runtime-tokio", "uuid"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
tokio = { version = "1.42.0", features = ["macros", "rt", "rt-multi-thread", "test-util"] }
once_cell = "1.20.2"
axum = "0.7.9"
serde = { version = "1.0.216", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
http = "1.2.0"
tower-http = "0.6.2"
axum-sqlx-tx = "0.9.0"
serde_json = "1.0.133"
semver = "1.0.24"
